# OpenIntel

./: LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
openintel/: cli.py  detector.py
tests/: test_analyzer.py
